# ALEmodel-WettingDynamic

./: .gitignore  ALEModelAmdis2.pc.in  CMakeLists.txt  README.md  codim0extractor.hh  dune.module  installScript.sh  mergedGrids-grid0.vtk  mergedGrids-grid1.vtk
amdis/: CMakeLists.txt
amdis/ALEModelAmdis2/: AxisymmetricDirichletBC.hpp  AxisymmetricDirichletBC.inc.hpp  CMakeLists.txt  CorrectInterfaceMembraneCoords.hpp  HeaderIncludes.hpp  MeshMovementBC.hpp  MeshMovementBC.inc.hpp  OneSidedInterpolator.hpp  hostGridInterpolator.hpp  myIndices.hpp  writeFiles.hh
amdis/ALEModelAmdis2/localoperators/: CahnHilliardOperator.hpp  NavierStokesOperator.hpp  PointIntegralOperatorAxi.hpp  PointIntegralOperatorAxiKappa.hpp  SecondOrderGradTestGradTrialAxi.hpp  SurfaceCahnHilliardOperator.hpp  SurfaceFShellOperator.hpp  SurfaceFirstOrderTestDivTrialvecAxi.hpp  SurfaceZeroOrderTestTrialAxi2.hpp  SurfaceZeroOrderTestTrialvecSpecial.hpp  SurfaceZeroOrderTestVecNormal.hpp  SurfaceZeroOrderTestVecTrialSpecial.hpp  Surface_couplingOperator.hpp  Surface_lambda1_lambda2Operator.hpp  Surface_xS_kappaVecOperator.hpp
amdis/ALEModelAmdis2/modelExtensions/: Activity.hpp  Binodal.hpp  ExtensionInterface.hpp  ExtensionManager.hpp
amdis/ALEModelAmdis2/remeshing/: InterpolateGrids.hpp  InterpolateGrids.impl.hpp  MeshGenerator.h
init/: domo.2d  (+7 more)
src/: CMakeLists.txt  Laplace.hpp  Laplace.impl.hpp  NavierStokesCahnHilliard.hpp  NavierStokesCahnHilliard.impl.hpp  ShellGeometry.hpp  TimeHandler.hpp  ale_model.cc  helperFunctions.hh  jumpAcrossGamma.hpp  remeshingLoop.hh  updateFunctions.hpp
(+92 files in other folders)
